--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "NodeExpressHandlebars",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -21,5 +22,6 @@
     "express": "^4.17.1",
     "express-handlebars": "^5.1.0",
     "mysql2": "^2.1.0"
-  }
+  },
+  "devDependencies": {}
 }
